--- a/tutorial/project.yaml
+++ b/tutorial/project.yaml
@@ -29,7 +29,9 @@ pdb_topology_file: ala5.pdb  # this is used to generate the topolgy
 
 # if method=implict (the other option), then only a production_dry will be returned.
 method: explicit
-adaptive_sampling: myfavorite
+adaptive_sampling: counts_based
+  adaptive_options:
+    beta: 0.0
 
 # MSM Builder Parameters
 metric:
